OAK-11023: Remove usage of Guava newArrayList (w.i.p.)